manifests/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      automountServiceAccountToken: false
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.1
          args:
            ["start", "--proxy-headers=forwarded", "--features=preview", "--hostname-strict=false", "--spi-theme-welcome-theme=nl-design-system" ]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          volumeMounts:
            - name: keycloak-provider
              mountPath: /opt/keycloak/providers/
      volumes:
        - name: keycloak-provider
          emptyDir: {}
